Correct some spacing to look closer to original.

--- a/common.css
+++ b/common.css
@@ -112,15 +112,15 @@ h1,h2,h3 {
 
 h1 {
   font-size: 3.1em;
-  margin-top: 0.6em;
-  margin-bottom: 0.6em;
+  margin-top: 0.4em;
+  margin-bottom: 0.5em;
   line-height: 1.2;
 }
 
 h2 {
   font-size: 1.2em;
-  margin-top: 1.6em;
-  margin-bottom: 0.4em;
+  margin-top: 2em;
+  margin-bottom: 0.3em;
 }
 
 p {
@@ -206,8 +206,7 @@ p {
   max-width: 1600px;
   min-width: 1000px;
   margin: 4% auto 4% auto;
-  /*padding: 2em 3em 2em 3em;*/
-  padding: 3em 5em 3em 5em;
+  padding: 3em 4.6em 3em 4.6em;
   box-shadow: 0px 0px 10px 0px rgb(181, 170, 160);
 }
 
@@ -293,7 +292,7 @@ figure {
 /* max-width: 697px + 16px;
  */
   max-width: 713px;
-  margin-right: 39px;
+  margin-right: 41px;
   margin-bottom: 33px;
 }
 
@@ -335,8 +334,8 @@ figure:before {
 header>p {
   position: relative;
   overflow: hidden;
-  padding-top: 1.8em;
-  padding-bottom: 1.8em;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 header>p:before {
@@ -355,7 +354,7 @@ header>p:before {
 }
 
 .content>p {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 /* Main Footer
